# memcachejsi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-memcachejsi.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativememcachejsi/: MemcachejsiModule.java  MemcachejsiPackage.java
cpp/: react-native-memcachejsi.cpp  react-native-memcachejsi.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativememcachejsi/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativememcachejsi/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/MemcachejsiExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/MemcachejsiExample.xcodeproj/: project.pbxproj
example/ios/MemcachejsiExample.xcodeproj/xcshareddata/xcschemes/: MemcachejsiExample.xcscheme
example/ios/MemcachejsiExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Memcachejsi.h  Memcachejsi.mm
ios/Memcachejsi.xcodeproj/: project.pbxproj
lib/commonjs/: index.js  index.js.map
lib/module/: index.js  index.js.map
lib/typescript/: index.d.ts  index.d.ts.map
src/: index.tsx
